--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -5,7 +5,7 @@
         <div class="custom-modal-title modal-green">
             <div class="row flex-center">
                 <div class="col-lg-4 col-md-4">
-                    <h3>REQUEST FOR SERVICES</h3>
+                    <h3>Request for services</h3>
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
                     <h6 class="text-white mb-5"> Type Of Service</h6>
@@ -31,7 +31,7 @@
                         </ui-select-choices>
                     </ui-select>
 
-                    <div class="custom-tooltip tooltip-left tooltip-center mt-15" ng-show="showCatError">
+                    <div class="custom-tooltip tooltip-top" ng-show="showCatError">
                         <div class="custom-tooltip-inner">
                             Select Category
                         </div>                    
@@ -49,15 +49,16 @@
                 <div class="col-lg-4 col-md-4 br-1">
                     <div class="modal-left">
                         <div class="notes">
+                            <div class="custom-tooltip tooltip-right" ng-if="checkError">
+                                <div class="custom-tooltip-inner">
+                                    You Need to agree TSA Protection rules!
+                                </div>                    
+                            </div>
                             <p>NOTE: The is a <span class="success bold">Tripartite Standard Agreement</span> form to protect both parties against any issues in the future. Read for more info <span class="success bold">here</span>.</p>
                             <div class="form-group mt-30 mb-0">
                                 <input class="magic-checkbox" type="checkbox" name="isaccept" id="note" ng-true-value="1" ng-false-value="0" ng-model="formData.isaccept" required ng-disabled="!formData.request_type" />
                                 <label class="text font-s" for="note" tooltip="{{categoryText}}" tooltip-is-open="ishover && !formData.isaccept && formData.request_category" tooltip-placement="right">Read and agreed to the TSA Protection Scheme</label>
-                                <div class="custom-tooltip tooltip-right tooltip-center" ng-if="checkError">
-                                    <div class="custom-tooltip-inner">
-                                        You Need to agree TSA Protection rules!
-                                    </div>                    
-                                </div>
+                                
                             </div>
                         </div>
                         
@@ -142,7 +143,7 @@
                         </div>
 
 
-                        <div class="form-row mt-30">
+                        <div class="form-row mt-30 mb-0">
                             <div class="form-column flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Deadline</label>
@@ -188,7 +189,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-15">
+                        <div class="form-row mt-30 mb-0">
                             <div class="form-column flex-center-space">
                             </div>
                             <div class="form-column flex-center-space ml-30">
