--- a/angular/tpl/blocks/modals/newevent.html
+++ b/angular/tpl/blocks/modals/newevent.html
@@ -109,7 +109,7 @@
                             <span class="error error-text" ng-if="descriptionerror">Enter post Description</span>
                         </div>
 
-                        <div class="form-row mt-20" ng-if="formData.type == 'Service'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Service'">
                             <div class="form-column flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Location</label>
@@ -171,7 +171,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-20" ng-if="formData.type == 'Shop'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Shop'">
                             <div class="form-column flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Category</label>
@@ -212,7 +212,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-20" ng-if="formData.type == 'Rental'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Rental'">
                             <div class="form-column flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Location</label>
@@ -260,7 +260,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-20" ng-if="formData.type == 'Event'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Event'">
                             <div class="form-column flex-top-space">
                                 <div class="form-group">
                                     <label class="control-label">Start date</label>
@@ -327,7 +327,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-15" ng-if="formData.type">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type">
                             <div class="form-column flex-center-space">
                                 <div class="form-group wd-100" ng-if="formData.type == 'Event'">
                                     <label class="control-label">From</label>
@@ -376,7 +376,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row" ng-if="formData.type == 'Event'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Event'">
                             <div class="form-group">
                                 <input class="magic-checkbox" type="checkbox" name="layout" id="save" value="option" />
                                 <label class="text" for="save">Save the date</label>
@@ -384,7 +384,7 @@
                         </div>
                     </div>
                     <div class="modal-right" ng-show="activediv =='address'" ng-if="formData.type != 'Service'">
-                        <div class="row">
+                        <div class="row mb-0">
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label class="control-label">Address</label>
@@ -426,7 +426,7 @@
 
                         </div>
 
-                        <div class="row">
+                        <div class="row mt-30 mb-0">
                             <div class="col-lg-6 col-md-6">  
                                 <div class="row">
                                     <div class="col-lg-8 col-md-8">
@@ -451,7 +451,7 @@
                             </div>
                         </div>
 
-                        <div class="row" ng-if="user.iscompany == 1">
+                        <div class="row mt-30 mb-0" ng-if="user.iscompany == 1">
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label class="control-label">Organisation</label>
@@ -469,7 +469,7 @@
 
                         </div>
 
-                        <div class="row">
+                        <div class="row mt-30 mb-0">
                             <div class="col-lg-12 col-md-12">
                                 <div class="form-group">
                                     <label class="control-label">Order Link (Optional)</label>
@@ -478,7 +478,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row mt-30 mb-0">
                             <div class="col-lg-6 col-md-6">
                                 <div class="row">
                                     <div class="col-lg-4 col-md-4">
@@ -499,7 +499,7 @@
                         </div>
 
 
-                        <div class="form-row mt-15">
+                        <div class="form-row mt-30 mb-0">
                             <div class="form-column flex-center-space">
                                 
                             </div>
