--- a/angular/tpl/blocks/modals/productModal.html
+++ b/angular/tpl/blocks/modals/productModal.html
@@ -105,7 +105,7 @@
                             <span class="error error-text" ng-if="descriptionerror">Enter post Description</span>
                         </div>
 
-                        <div class="form-row mt-20" ng-if="formData.type == 'Service'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Service'">
                             <div class="form-column flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Location</label>
@@ -164,7 +164,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-20" ng-if="formData.type == 'Shop'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Shop'">
                             <div class="form-column flex-basis-50 flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Category</label>
@@ -198,7 +198,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-20" ng-if="formData.type == 'Rental'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Rental'">
                             <div class="form-column flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Location</label>
@@ -244,7 +244,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-20" ng-if="formData.type == 'Event'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Event'">
                             <div class="form-column flex-top-space">
                                 <div class="form-group">
                                     <label class="control-label">Start date</label>
@@ -304,7 +304,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-15 mb-30" ng-if="formData.type">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type">
                             <div class="form-column flex-center-space">
                                 <div class="form-group wd-100" ng-if="formData.type == 'Event'">
                                     <label class="control-label">From</label>
@@ -353,7 +353,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row" ng-if="formData.type == 'Event'">
+                        <div class="form-row mt-30 mb-0" ng-if="formData.type == 'Event'">
                             <div class="form-group">
                                 <input class="magic-checkbox" type="checkbox" name="layout" id="save" value="option" />
                                 <label class="text" for="save">Save the date</label>
@@ -361,7 +361,7 @@
                         </div>
                     </div>
                     <div class="modal-right" ng-show="activediv =='address'" ng-if="formData.type != 'Service'">
-                        <div class="row">
+                        <div class="row mb-0">
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label class="control-label">Address</label>
@@ -393,7 +393,7 @@
 
                         </div>
 
-                        <div class="row">
+                        <div class="row mt-30 mb-0">
                             <div class="col-lg-6 col-md-6">
                                 <div class="row">
                                     <div class="col-lg-8 col-md-8">
@@ -414,7 +414,7 @@
                             </div>
                         </div>
 
-                        <div class="row" ng-if="user.iscompany == 1">
+                        <div class="row mt-30 mb-0" ng-if="user.iscompany == 1">
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label class="control-label">Organisation</label>
@@ -432,7 +432,7 @@
 
                         </div>
 
-                        <div class="row">
+                        <div class="row mt-30 mb-0">
                             <div class="col-lg-12 col-md-12">
                                 <div class="form-group">
                                     <label class="control-label">Order Link (Optional)</label>
@@ -441,7 +441,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row mt-30 mb-0">
                             <div class="col-lg-6 col-md-6">
                                 <div class="row">
                                     <div class="col-lg-4 col-md-4">
@@ -460,7 +460,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row mt-15 mb-30">
+                        <div class="form-row mt-30 mb-0">
                             <div class="form-column flex-center-space">
 
                             </div>
