project , feed table update & category label added

--- a/angular/tpl/desktop/productchat.html
+++ b/angular/tpl/desktop/productchat.html
@@ -1,7 +1,7 @@
 <div ng-controller="ProductChatCtrl" class="content-wrapper">
    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
    <div class="center-content">
-   	 <div class="container-top mt-15 mb-15" ng-if="ProductViewData.title">
+   	 <div class="container-top mb-15" ng-if="ProductViewData.title">
             <div class="content-detail-left">
                 <div class="slider-wrapper">
                     <div class="custom-slider">
