--- a/angular/tpl/desktop/chats.html
+++ b/angular/tpl/desktop/chats.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row mt-15">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" infinite-scroll="loadMoreRecords()" infinite-scroll-distance="0" infinite-scroll-disabled="((formLoading || chatusers.length > 0) && (totalData == chatusers.length))" infinite-scroll-use-document-bottom="true">
-                <div class="table-card" ng-repeat="(key,data) in chatusers"  ng-class="{'unread-message':!data.status}">
+                <div class="table-card chat-list-table" ng-repeat="(key,data) in chatusers"  ng-class="{'unread-message':!data.status}">
                     <div class="flex-top-space">
                         <div class="table-img" ng-click="gotochatpage(key,data)">
                             <img class="avatar-img" ng-src="{{IMGURL}}{{data.fromuser.avatar}}">
