--- a/angular/tpl/desktop/feeds.html
+++ b/angular/tpl/desktop/feeds.html
@@ -36,7 +36,7 @@
         
         <div class="row mt-15" ng-if="activetab == 'myfeed'">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in myfeeds.data | itemsPerPage: totalPerPage" total-items="myfeeds.total" pagination-id="myfeed-pagination" current-page="myfeedpagination.current">
-                <div class="table-card">
+                <div class="table-card feed-list-table">
                     <div class="flex-top-space">
                         <div class="table-img" ui-sref="app.viewfeed({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}" background-image="{{data.files[0].filetype == 1 ? IMGURL : ''}}{{data.files[0].thumbnail}}">
                         </div>
@@ -55,7 +55,6 @@
                             </div>
                         </div>
                         <div class="table-option">
-
                             <a ng-click="sharefeedtosocial(data)"><i class="fa fa-share"></i></a>
                             <a ng-click="removefeed(key,data.id)"><i class="fa fa-minus-circle"></i></a>
                         </div>
