number validation done

--- a/angular/tpl/blocks/modals/collaborateModal.html
+++ b/angular/tpl/blocks/modals/collaborateModal.html
@@ -180,7 +180,7 @@
                                         <div class="member-status">Amount Allocated <span class="text-danger" ng-if="!member.price"> (Required)</span></div>
                                         <div class="rate-holder">
                                             <div class="currency">$</div>
-                                            <div class="currency-text" > <input type="text" placeholder="0.00" name="amount" ng-model="member.price"></div>
+                                            <div class="currency-text" > <input type="text" placeholder="0.00" name="amount" ng-model="member.price" numbers-only></div>
                                         
                                         </div>
                                     </div>
