--- a/angular/tpl/desktop/todos.html
+++ b/angular/tpl/desktop/todos.html
@@ -32,7 +32,7 @@
 
         <div class="row mt-15">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in todos.data | itemsPerPage: totalPerPage" total-items="todos.total" current-page="pagination.current">
-               <div class="table-card">
+               <div class="table-card todo-card">
                     <div class="flex-top-space">
                         <div class="table-img">
                             <img ng-src="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}" ui-sref="app.projectdetails({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"/>
