--- a/angular/tpl/desktop/friends.html
+++ b/angular/tpl/desktop/friends.html
@@ -1,7 +1,7 @@
 <div class="content-wrapper" ng-controller="FriendsCtrl">
     <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
     <div class="center-content">
-        <div class="row" id="Friends">
+        <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar">
                     <div class="topbar-left">
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15" ng-if="friends.total > 0">
+        <div class="row mt-15" ng-if="friends.total > 0"  id="Friends">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
@@ -92,7 +92,7 @@
                 <dir-pagination-controls on-page-change="pageChanged(newPageNumber,'friends')" class="pagination-ctrl" pagination-id="friends-pagination"></dir-pagination-controls>
             </div>
         </div>
-        <div class="row"  id="Others">
+        <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar bg-gray">
                     <div class="topbar-left">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15">
+        <div class="row mt-15" id="Others">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
