--- a/angular/tpl/desktop/wishlist.html
+++ b/angular/tpl/desktop/wishlist.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="row mt-15">
-            <div ng-class="slidecount < 4 ? 'col-lg-4 col-md-4 col-sm-4' : 'col-lg-3 col-md-3 col-sm-3'" class="col-xs-12" dir-paginate="(key,data) in wishedproducts.data | itemsPerPage: totalPerPage" total-items="wishedproducts.total" current-page="pagination.current">
+            <div ng-class="slidecount < 4 ? 'col-lg-4 col-md-4 col-sm-4' : 'col-lg-3 col-md-3 col-sm-3'" class="col-xs-12 custom-col" dir-paginate="(key,data) in wishedproducts.data | itemsPerPage: totalPerPage" total-items="wishedproducts.total" current-page="pagination.current">
                 <div class="card">
                     <div class="card-img" background-image="{{data.product.images[0].filetype == 1 ? IMGURL:''}}{{data.product.images[0].thumbnail}}" ui-sref="app.viewitem({id:data.product.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
                     </div>
