--- a/angular/tpl/desktop/search.html
+++ b/angular/tpl/desktop/search.html
@@ -120,7 +120,7 @@
 
         <div class="row mt-15">
 
-            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" dir-paginate="(key,data) in products.data | itemsPerPage: totalPerPage" total-items="products.total" current-page="pagination.current" pagination-id="search-pagination">
+            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4 custom-col" dir-paginate="(key,data) in products.data | itemsPerPage: totalPerPage" total-items="products.total" current-page="pagination.current" pagination-id="search-pagination">
                 <div class="card">
                     <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}" ng-click="showitem(key,data)" >
                     </div>
@@ -158,7 +158,7 @@
 
         <div class="row mt-15">
 
-            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" ng-repeat="(key,data) in alsolikeproducts">
+            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4 custom-col" ng-repeat="(key,data) in alsolikeproducts">
                 <div class="card">
                     <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}" ui-sref="app.viewitem({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
                     </div>
