--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -98,7 +98,7 @@
                         </div>
                         <div class="row">
                             <slick ng-if="!formLoading" init-onload="true" data="products.service" settings="slickConfig" slides-to-scroll="1" dots="false" infinite="false">
-                                <div ng-class="slidecount < 4 ? 'col-lg-4 col-md-4 col-sm-4' : 'col-lg-3 col-md-3 col-sm-3' " class=" col-xs-12" ng-repeat="(key,data) in products.service">
+                                <div ng-class="slidecount < 4 ? 'col-lg-4 col-md-4 col-sm-4' : 'col-lg-3 col-md-3 col-sm-3' " class="custom-col col-xs-12" ng-repeat="(key,data) in products.service">
                                     <div class="card" ng-click="showItem(data)">
                                         <div class="card-img" ui-sref="app.viewitem({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                         </div>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="row">
                             <slick ng-if="!formLoading" init-onload="true" data="products.shop" settings="slickConfig" slides-to-scroll="1" dots="false" infinite="false">
-                                <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4" ng-repeat="(key,data) in products.shop">
+                                <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 custom-col" ng-repeat="(key,data) in products.shop">
                                     <div class="card" ng-click="showItem(data)">
                                         <div class="card-img" ui-sref="app.viewitem({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                         </div>
@@ -181,7 +181,7 @@
                         </div>
                         <div class="row">
                             <slick ng-if="!formLoading" init-onload="true" data="products.rental" settings="slickConfig" slides-to-scroll="1" dots="false" infinite="false">
-                                <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4" ng-repeat="(key,data) in products.rental">
+                                <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 custom-col" ng-repeat="(key,data) in products.rental">
                                     <div class="card" ng-click="showItem(data)">
                                         <div class="card-img" ui-sref="app.viewitem({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                         </div>
@@ -222,7 +222,7 @@
                         </div>
                         <div class="row">
                             <slick ng-if="!formLoading" init-onload="true" data="products.event" settings="slickConfig" slides-to-scroll="1" dots="false" infinite="false">
-                                <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4" ng-repeat="(key,data) in products.event">
+                                <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 custom-col" ng-repeat="(key,data) in products.event">
                                     <div class="card" ng-click="showItem(data)">
                                         <div class="card-img" ui-sref="app.viewitem({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                         </div>
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div ng-class="slidecount < 4 ? 'col-lg-4 col-md-4 col-sm-4' : 'col-lg-3 col-md-3 col-sm-3'" class="col-xs-12" dir-paginate="(key,data) in typeproductdata.data | itemsPerPage: typestotalPerPage" total-items="typeproductdata.total" current-page="pagination.current">
+                            <div ng-class="slidecount < 4 ? 'col-lg-4 col-md-4 col-sm-4' : 'col-lg-3 col-md-3 col-sm-3'" class="custom-col col-xs-12" dir-paginate="(key,data) in typeproductdata.data | itemsPerPage: typestotalPerPage" total-items="typeproductdata.total" current-page="pagination.current">
                                 <div class="card" ng-click="showItem(data)">
                                     <div class="card-img" ui-sref="app.viewitem({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                     </div>
