--- a/angular/tpl/mobile/friends.html
+++ b/angular/tpl/mobile/friends.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="row mt-15">
-            <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4" dir-paginate="(key,friend) in friends.data | itemsPerPage: totalPerPage" total-items="friends.total" current-page="friendspagination.current" pagination-id="friends-pagination">
+            <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 custom-col" dir-paginate="(key,friend) in friends.data | itemsPerPage: totalPerPage" total-items="friends.total" current-page="friendspagination.current" pagination-id="friends-pagination">
                 <div class="card friend-card">
                     <div class="card-content">
                         <div class="content-left">
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="row mt-15">
-            <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4" dir-paginate="(key,people) in otherpeoples.data | itemsPerPage: totalPerPage" total-items="otherpeoples.total" current-page="peoplespagination.current" pagination-id="peoples-pagination">
+            <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 custom-col" dir-paginate="(key,people) in otherpeoples.data | itemsPerPage: totalPerPage" total-items="otherpeoples.total" current-page="peoplespagination.current" pagination-id="peoples-pagination">
                 <div class="card friend-card">
                     <div class="card-content">
                         <div class="content-left">
