--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -9,14 +9,10 @@
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
                     <h6 class="text-white mb-5"> Type Of Service</h6>
-                    <ui-select ng-model="formData.request_type" theme="bootstrap" ng-change="resetProductItems()" search-enabled="false" ng-disabled="true" ng-readonly="!$select.searchEnabled" class="only-service">
-                        <ui-select-match allow-clear="true" class="selected-item float-lt">
-                            <p><i class="fa fa-circle-o"></i> {{formData.request_type ? formData.request_type : 'Service Type'}}</p>
-                        </ui-select-match>
-                        <ui-select-choices repeat="type in requestservicetypes | filter: $select.search">
-                            <span ng-bind-html="type | highlight: $select.search"></span>
-                        </ui-select-choices>
-                    </ui-select>
+                    <div class="category-label silver-category">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Services</span>
+                        </div>
 
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
