--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -195,8 +195,8 @@
                 </div>
             </div>
 
-            <div class="msg-post"  ui-sref="app.chats">
-                <img src="../assets/img/chat-icon.png" alt="message" />
+            <div class="msg-post" ng-if="stateurl != 'app.chats'">
+                <img src="../assets/img/chat-icon.png" alt="message" ng-click="showhideChat();">
             </div>
 
         </div>
