--- a/angular/tpl/desktop/chats.html
+++ b/angular/tpl/desktop/chats.html
@@ -5,7 +5,7 @@
             <div class="col-lg-12 col-md-12">
                 <div class="topbar">
                     <div class="topbar-left">
-                        <h2><i class="fa fa-bell-o" aria-hidden="true"></i> &nbsp;LIST OF CHATS</h2>
+                        <h2><i class="fa fa-bell-o" aria-hidden="true"></i> &nbsp;My Chat Lists</h2>
                     </div>
                 </div>
             </div>
