--- a/angular/tpl/blocks/popover/productpopover.html
+++ b/angular/tpl/blocks/popover/productpopover.html
@@ -18,11 +18,11 @@
    </div>
    <div class="search-list-modal">
       <div class="row">
-            <div class="col-md-7 col-sm-7 col-lg-7">
+            <div class="col-md-6 col-sm-6 col-lg-6">
                <h3>{{popOverData.title}} </h3>
                <div class="description">{{popOverData.description | cut:true:100:''}}</div>               
             </div>
-            <div class="col-md-4 col-sm-4 col-lg-4 col-lg-offset-1 col-md-offset-1">
+            <div class="col-md-5 col-sm-5 col-lg-5 col-lg-offset-1 col-md-offset-1">
                <div class="col-md-6 col-sm-6 col-lg-6 mt-10 text-center br-1">
                   <div class="label-count">Completed
                      Projects
@@ -40,12 +40,12 @@
       <div class="row mt-20">
          <div class="col-lg-7 col-md-7">
             <div class="price-box">
-               <span class="per-price"><span ng-if="popOverData.price > 0">$</span>{{popOverData.price ? popOverData.price: 'Free'}}</span>
-               <span class="per-time" ng-if="popOverData.price > 0 && popOverData.type !='Shop'">Per {{popOverData.periodtype}}</span>
+               <span class="price"><span ng-if="popOverData.price > 0">$</span>{{popOverData.price ? popOverData.price: 'Free'}}</span>
+               <span class="price-sub" ng-if="popOverData.price > 0 && popOverData.type !='Shop'">Per {{popOverData.periodtype}}</span>
             </div>
          </div>
          <div class="col-md-4 col-sm-4 col-lg-4 col-lg-offset-1 col-md-offset-1">
-            <a class="btn success-btn block-btn" ng-click="logintoProduct(popOverData);">LOGIN TO VIEW</a>
+            <a class="btn success-btn block-btn" ng-click="logintoProduct(popOverData);">Login To View</a>
          </div>
       </div>
    </div>
