new changes committed

--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -195,7 +195,7 @@
                 </div>
             </div>
 
-            <div class="msg-post" ng-if="stateurl != 'app.chats'">
+            <div class="msg-post" ng-if="stateurl != 'app.chats' && stateurl != 'app.feeds'">
                 <img src="../assets/img/chat-icon.png" alt="message" ng-click="showhideChat();">
             </div>
 
