--- a/angular/tpl/desktop/feeds.html
+++ b/angular/tpl/desktop/feeds.html
@@ -50,8 +50,8 @@
                                 <span></span>
                             </div>
                             <div class="table-col">
-                                <h5>Early {{data.deadline | dateToISO | date:'MMM yyyy'}}</h5>
-                                <span class="danger">{{data.remainingdays}} Days Remaining</span>
+                                <h5>Category</h5>
+                                <span class="primary">{{data.category}}</span>
                             </div>
                         </div>
                         <div class="table-option">
