--- a/angular/tpl/desktop/chats.html
+++ b/angular/tpl/desktop/chats.html
@@ -10,11 +10,11 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15" ng-if="chatusers.length > 0">
+        <div class="row mt-15" ng-if="chatusers.total > 0">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
-                        <span class="lefttext">Showing <b> 1 </b> to <b>{{chatusers.length}}</b> of <b>{{totalData}}</b> Results.</span>
+                        <span class="lefttext">Showing <b> {{chatusers.from}} </b> to <b>{{chatusers.to}}</b> of <b>{{chatusers.total}}</b> Results.</span>
                     </div>
                     <div class="topbar-right">
                         <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">| Sort by <i class="fa fa-angle-down ml-10"></i></span>
@@ -30,8 +30,8 @@
             </div>
         </div>
         <div class="row mt-15">
-            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" infinite-scroll="loadMoreRecords()" infinite-scroll-distance="0" infinite-scroll-disabled="((formLoading || chatusers.length > 0) && (totalData == chatusers.length))" infinite-scroll-use-document-bottom="true">
-                <div class="table-card chat-list-table" ng-repeat="(key,data) in chatusers"  ng-class="{'unread-message':!data.status}">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                <div class="table-card chat-list-table" dir-paginate="(key,data) in chatusers.data | itemsPerPage: totalPerPage" total-items="chatusers.total" current-page="pagination.current" ng-class="{'unread-message':!data.status}">
                     <div class="flex-top-space">
                         <div class="table-img" ng-click="gotochatpage(key,data)">
                             <img class="avatar-img" ng-src="{{IMGURL}}{{data.fromuser.avatar}}">
@@ -56,10 +56,16 @@
                 </div>
             </div>
 
-            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="chatusers.length  ==  0">
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="chatusers.total  ==  0 ">
                 <div class="wd-100 text-center white-bg p-15">
                     <h4>No records Found</h4>
                 </div>
+            </div>
+        </div>
+
+        <div class="row mb-30">
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="chatusers.last_page > 0 && !formLoading">
+                <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
             </div>
         </div>
     </div>
