--- a/angular/tpl/desktop/dashboard.html
+++ b/angular/tpl/desktop/dashboard.html
@@ -454,7 +454,7 @@
                             </div>
                         </li>
                         <li>
-                            <span>Influencer</span>
+                            <span>Rank</span>
                             <div class="font-price">
                                 <img ng-src="{{IMGURL}}{{userData.xprank.icon}}" class="rank-icon" />
                             </div>
