todo and otp modal class changes done

--- a/angular/tpl/blocks/modals/todoModal.html
+++ b/angular/tpl/blocks/modals/todoModal.html
@@ -131,7 +131,7 @@
 
                         <div class="form-group mt-30 mb-0">
                             <label class="control-label">Deadline</label>
-                            <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                            <datepicker date-format="yyyy-MM-dd" date-min-limit="{{minDate}}" selector="form-control">
                                 <div class="input-group">
                                     <span class="input-group-addon" style="cursor: pointer">
                                         <i class="fa fa-lg fa-calendar"></i>
