--- a/angular/tpl/desktop/todos.html
+++ b/angular/tpl/desktop/todos.html
@@ -8,7 +8,7 @@
                         <h2><i class="fa fa-tasks" aria-hidden="true"></i> &nbsp;Todo List</h2>
 
                     </div>  
-                     <button type="button" class="btn default-btn pull-right" ng-click="opentodoModal();"><i class="fa fa-plus-circle mr-5"></i> TODO</button>                                            
+                     <button type="button" class="btn default-btn pull-right" ng-click="opentodoModal();"><i class="fa fa-plus-circle mr-5"></i> Todo</button>                                            
                 </div>
             </div>
    </div>
@@ -16,7 +16,7 @@
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
-                        <span class="lefttext">Active Todos | <b>{{todos.total}}</b> Todos.</span>
+                        <span class="lefttext">Active Todos | <b>{{todos.total}}</b> Todo items</span>
                     </div>
                     <div class="topbar-right">
                         <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">| Filter by <i class="fa fa-angle-down ml-10"></i></span>
