dashboard updates done

--- a/angular/index.html
+++ b/angular/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <title>Collabro</title>
-    <!-- <base href="/project/Collabro/angular/"> -->
     <base href="/collabro-v1/collabro-website/angular/" />
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
@@ -152,6 +151,9 @@
     <script src="libs/webnotification/web-notification.js"></script>
     <script src="libs/webnotification/angular-web-notification.js"></script>
      <script src="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.js"></script>
+
+     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi_x8q2LOzxxhHsOb0_OCSCjAo3FcYEMg&sensor=false"></script>
+    <script src="libs/map/ng-map.min.js"></script>
 
     <!-- App -->
     <script src="js/app.js"></script>
