--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -2,7 +2,7 @@
 
     <div class="right-wrapper">
         <div class="right-title">
-            <h4 class="text-uppercase">{{user.xprank.rankname}} </h4>
+            <h4 class="text-uppercase text-left">{{user.xprank.rankname}} </h4>
             <img class="rank-icon" ng-src="{{IMGURL}}{{user.xprank.icon}}" height="20px">
         </div>
         <div class="right-content">
@@ -117,7 +117,7 @@
 <div class="right-sidebar" ng-if="stateurl=='app.mydashboard' || stateurl=='app.viewuser'">
     <div class="right-wrapper">
         <div class="right-title">
-            <h4 ><h4 class="text-uppercase">{{user.xprank.rankname}} </h4> </h4>
+            <h4 class="text-uppercase text-left">{{user.xprank.rankname}} </h4>
             <img class="rank-icon" ng-src="{{IMGURL}}{{user.xprank.icon}}" height="20px">
         </div>
         <div class="right-content">
