--- a/angular/tpl/blocks/modals/otpModal.html
+++ b/angular/tpl/blocks/modals/otpModal.html
@@ -1,15 +1,26 @@
 <script src="js/modal-js/otpmodal.js"></script>
-<div class="form-group">
-<form name="otpform" class="form-horizontal" novalidate ng-submit="verifyotp(otpform);">
-   <div class="m-b-sm">
-      <h5 class="modal-title" id="exampleModalLabel">Verify Your OTP Here! <span ng-messages="otpform.otp.$error" role="alert" class="otp-errormsg"><span class="text-danger" ng-message="required">OTP Required</span><span class="text-danger"ng-message="minlength">Atleast 6 characters long.</span></span></h5>
+<div class="custom-modal">
+   <div class="custom-modal-title">
+      <div class="row flex-center">
+          <div class="col-lg-10 col-md-10">
+              <h3 class="ng-binding">Verify Your OTP Here!</h3>
+          </div>
+          <div class="col-lg-2 col-md-2 text-right">
+              <a ng-click="closeModal()"><img src="../assets/img/close.png"></a>
+          </div>
+      </div>
+  </div>
+  <form name="otpform" class="form-horizontal" novalidate ng-submit="verifyotp(otpform);">
+  <div class="custom-modal-body bt-1">
+
+     <div class="m-b-sm">
+        <input type="text" class="form-control" id="user-otp" ng-model="otpData.otp" name="otp" numbers-only placeholder="Enter recevived OTP in your Mobile" required minlength="6" maxlength="6">
+     </div>
+     <span ng-messages="otpform.otp.$error" role="alert" class="otp-errormsg"><span class="text-danger" ng-message="required">OTP Required</span><span class="text-danger"ng-message="minlength">Atleast 6 characters long.</span></span>
    </div>
-   <div class="m-b-sm">
-      <input type="text" class="form-control" id="user-otp" ng-model="otpData.otp" name="otp" numbers-only placeholder="Enter recevived OTP in your Mobile" required minlength="6" maxlength="6">
-   </div>
-   <div class="m-b-sm">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-disabled="otpLoading" ng-click="closeModal()">Close</button>
-      <button type="submit" class="btn commision-button" button-spinner="otpLoading" spinning-icon="fa fa-circle-o-notch fa-spin" ng-disabled="otpLoading||!otpform.$valid">Verify</button>
+   <div class="custom-modal-footer text-center bt-1">
+      <button type="submit" class="btn success-btn mr-20 ng-scope" button-spinner="otpLoading" spinning-icon="fa fa-circle-o-notch fa-spin" ng-disabled="otpLoading||!otpform.$valid">Verify</button>
+      <button type="button" class="btn danger-btn" data-dismiss="modal" ng-disabled="otpLoading"  ng-click="closeModal()">Cancel</button>
    </div>
 </form>
 </div>
