--- a/angular/tpl/desktop/dashboard.html
+++ b/angular/tpl/desktop/dashboard.html
@@ -405,36 +405,43 @@
                                 </section>
                                 <section id="tabset-four" class="tab-panel">
                                     <form name="passwordform" ng-submit="changePassword(passwordform)" novalidate>
-                                        <div class="row mt-20">
-                                            <div class="col-lg-12 col-md-12">
-                                                <div class="form-group">
-                                                    <label class="control-label">Current Password</label>
-                                                    <input class="form-control" type="password" ng-model="passwordData.oldpassword" name="currentpassword" required>
-                                                </div>
-                                            </div>
-                                        </div>
                                         <div class="row">
-                                            <div class="col-lg-12 col-md-12">
-                                                <div class="form-group">
-                                                    <label class="control-label">New Password</label>
-                                                    <input class="form-control" type="password" ng-model="passwordData.newpassword" name="newpassword" ng-minlength="8"required>
+                                            <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
+                                            
+                                                <div class="row mt-20">
+                                                    <div class="col-lg-12 col-md-12">
+                                                        <div class="form-group">
+                                                            <label class="control-label">Current Password</label>
+                                                            <input class="form-control" type="password" ng-model="passwordData.oldpassword" name="currentpassword" required>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-lg-12 col-md-12">
-                                                <div class="form-group">
-                                                    <label class="control-label">Confirm Password</label>
-                                                    <input class="form-control" type="password" ng-model="passwordData.confirmpassword" name="confirmpassword" ng-minlength="8"required>
+                                                <div class="row">
+                                                    <div class="col-lg-12 col-md-12">
+                                                        <div class="form-group">
+                                                            <label class="control-label">New Password</label>
+                                                            <input class="form-control" type="password" ng-model="passwordData.newpassword" name="newpassword" ng-minlength="8"required>
+                                                        </div>
+                                                    </div>
                                                 </div>
+                                                <div class="row">
+                                                    <div class="col-lg-12 col-md-12">
+                                                        <div class="form-group">
+                                                            <label class="control-label">Confirm Password</label>
+                                                            <input class="form-control" type="password" ng-model="passwordData.confirmpassword" name="confirmpassword" ng-minlength="8"required>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="row mt-20">
+                                                    <div class="col-lg-12 col-md-12">
+                                                        <input type="submit" class="btn silver-btn right" value="Submit" />
+                                                    </div>
+                                                </div>
+
                                             </div>
                                         </div>
 
-                                        <div class="row mt-20">
-                                            <div class="col-lg-12 col-md-12">
-                                                <input type="submit" class="btn silver-btn right" value="Submit" />
-                                            </div>
-                                        </div>
                                     </form>
                                 </section>
                             </div>
@@ -485,9 +492,9 @@
                     </div>
                 </div>
 
-                <div class="dashboard-bottom br-t mb-30">
-                    <p class="secondary mt-10 mb-10">Financial Distribution</p>
-                    <div class="chart-wrapper">
+                <div class="dashboard-bottom br-t pt-30 mb-30">
+                    <span class="secondary">Financial Distribution</span>
+                    <div class="chart-wrapper mt-20">
                         <div class="progress-wrapper">
                             <div class="progress-label">
                                 <h6><i class="fa fa-circle success"></i> Experience Points</h6>
@@ -604,7 +611,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="dashboard-bottom mt-15">
+                <div class="dashboard-bottom mt-30">
                     <div class="tabset-wrapper">
                         <div class="tabset grid3">
                             <input type="radio" name="tabset1" id="tab4" aria-controls="tabset-four" checked/>
@@ -617,19 +624,21 @@
                                 <section id="tabset-four" class="tab-panel">
                                     <div class="followers-area">
                                         <div class="row">
-                                            <div class="col-lg-5 col-md-5">
-                                                <h2 class="default ucase">Followers Skills area</h2>
+                                            <div class="col-lg-4 col-md-4">
+                                                <h3 class="default ucase">Followers Skills area</h3>
                                                 <ul class="followers-list">
                                                     <li ng-repeat="(key,data) in otherData.professiondata">
-                                                        <h4>{{data.profession}}</h4> <span>{{data.totalmembers}}</span></li>
+                                                        <h5>{{data.profession}}</h5> <span>{{data.totalmembers}}</span></li>
                                                 </ul>
                                             </div>
                                             <div class="col-lg-4 col-md-4 col-lg-offset-1 col-md-offset-1">
-                                                <h2 class="default ucase">Category</h2>
-                                                <div class="category-card" ng-repeat="(key,data) in otherData.typesData">
-                                                    <h4>{{data.name}}</h4>
-                                                    <span>{{data.count}}</span>
-                                                </div>
+                                                <h3 class="default ucase">Category</h3>
+                                                <ul class="followers-list">
+                                                    <li ng-repeat="(key,data) in otherData.typesData">
+                                                        <h5>{{data.name}}</h5>
+                                                        <span>{{data.count}}</span>
+                                                    </li>
+                                                </ul>
                                             </div>
                                         </div>
                                     </div>
@@ -646,12 +655,11 @@
                                 </section>
                                 <section id="tabset-six" class="tab-panel">
                                     <div class="table-listing">
-                                        <div class="table-card" dir-paginate="(key,data) in myProducts.data | itemsPerPage: totalPerPage" total-items="myProducts.total" current-page="pagination.current">
+                                        <div class="table-card dashboard-list-table" dir-paginate="(key,data) in myProducts.data | itemsPerPage: totalPerPage" total-items="myProducts.total" current-page="pagination.current">
                                             <div class="flex-top-space">
-                                                <div class="table-img" ui-sref="app.viewitem({'id':data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
-                                                    <img ng-src="{{data.images[0].filetype == 1 ? IMGURL:''}}{{data.images[0].thumbnail}}" />
+                                                <div class="table-img option-img" ui-sref="app.viewitem({'id':data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}" background-image="{{data.images[0].filetype == 1 ? IMGURL:''}}{{data.images[0].thumbnail}}">
                                                 </div>
-                                                <div class="table-content listing">
+                                                <div class="table-content">
                                                     <div class="table-col">
                                                         <h5>{{data.title}}</h5>
                                                         <span>Last Updated: {{convertDate(data.updated_at) | dateToISO | date:'dd MMMM yyyy'}}</span>
@@ -660,7 +668,7 @@
                                                         <h5>{{data.price ? (data.price | currency) + 'SGD': 'Free'}}</h5>
                                                         <span ng-if="data.price > 0 && data.type != 'Shop'">Per Hour</span>
                                                     </div>
-                                                    <div class="table-col table-flex">
+                                                    <div class="table-col">
                                                         <div class="table-col">
                                                             <h5>{{data.wishcount}}</h5>
                                                             <span><i class="fa fa-heart"></i></span>
@@ -668,17 +676,15 @@
                                                         <div class="table-col">
                                                             <h5>{{data.noofviews}}</h5>
                                                             <span><i class="fa fa-eye"></i></span>
-                                                        </div>
-                                                        <div class="table-col table-single-option">
-                                                            <a><img src="../assets/img/message-icon.png" />
-                                                            <span class="count" ng-if="data.chats.length > 0">{{data.chats.length}}</span>
-                                                        </a>
-                                                        </div>
-                                                        <div class="table-col table-single-option pr-5">
-                                                            <a ng-click="removeproduct(data)"><i class="fa fa-minus-circle"></i></a>
-                                                        </div>
+                                                        </div>                                                        
                                                     </div>
-                                                </div>                                                
+                                                </div> 
+                                                <div class="table-option">
+                                                    <a class="dash-img"><img src="../assets/img/message-icon.png" />
+                                                        <span class="count" ng-if="data.chats.length > 0">{{data.chats.length}}</span>
+                                                    </a>
+                                                    <a ng-click="removeproduct(data)"><i class="fa fa-minus-circle"></i></a>
+                                                </div>                                               
                                             </div>
                                         </div>
                                     </div>
