dashboard issues fixed

--- a/angular/tpl/blocks/modals/otpModal.html
+++ b/angular/tpl/blocks/modals/otpModal.html
@@ -1,5 +1,5 @@
 <script src="js/modal-js/otpmodal.js"></script>
-<div class="custom-modal">
+<div class="custom-modal" ng-controller="OTPModalCtrl">
    <div class="custom-modal-title">
       <div class="row flex-center">
           <div class="col-lg-10 col-md-10">
